...
  }

  @override
  Widget build(BuildContext context) {
    return MaterialApp.router(
      debugShowCheckedModeBanner: false,
      title: 'Tarnas Kids',
      theme: AppTheme.theme,
      routerConfig: appRouter,
    );
  }
}

